2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Complete, Macros, Options): Document the new style
	AM_INIT_AUTOMAKE.  Remove AM_AUTOMAKE_OPTIONS documentaion.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Get PACKAGE and VERSION from
	AC_INIT if they are available there.  Support a	new call form
	where the only argument is an optional space-separated list of
	Automake options.
	* m4/options.m4 (AM_AUTOMAKE_OPTIONS): Remove.
	(_AM_MANGLE_OPTION, _AM_SET_OPTION, _AM_SET_OPTIONS,
	_AM_IF_OPTION): New functions.
	* automake.in (AC_INIT_PATTERN): New variable.
	(global_options_line): Remove, use $seen_init_automake instead.
	(scan_one_autoconf_file, scan_autoconf_traces): Set $package_version
	from AC_INIT if available.  Support the new style AM_INIT_AUTOMAKE.
	Remove the AM_AUTOMAKE_OPTIONS handling.
	* configure.in: Modernize.
	* tests/defs (configure.in): Modernize.  One third of the tests
	still overwrite the default configure.in and use an old
	AM_INIT_AUTOMAKE call, 	so that makes testing for both.
	* tests/nodefine.test, tests/nodefine2.test: New files.
	* tests/Makefile.am (TESTS): Add them.

2002-01-08  Raja R Harinath  <harinath@cs.umn.edu>

	* automake.in (define_configure_variable): Propagate line numbers.

2002-01-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.2.

2002-01-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Run the Autoconf test in a subdirectory, then
	erase this directory.

2002-01-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in (AUTOMAKE): Create m4/amversion.m4.
	* m4/amversion.in: New file.
	* m4/Makefile.am (m4data_DATA, EXTRA_DIST): Replace by ...
	(dist_m4data_DATA): ... this.
	(nodist_m4data_DATA, DISTCLEANFILES): Add amversion.m4.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Require
	AM_SET_CURRENT_AUTOMAKE_VERSION.
	* automake.in (seen_automake_version): New variable.
	(scan_autoconf_traces, scan_one_autoconf_file,