@@ -14,5 +14,7 @@ cat > zoo/zoo.m4 << 'END'
 AC_DEFUN([AM_INIT_AUTOMAKE], zardoz)
 END
 
+# Strip all options from ACLOCAL, especially -I's.
+ACLOCAL="`echo $ACLOCAL | sed -e 's/ -.*$//'` --acdir=$srcdir/../m4"
 $ACLOCAL -I zoo || exit 1
 fgrep zardoz aclocal.m4
