@@ -5,16 +5,15 @@
 . $srcdir/defs || exit 1
 
 cat > configure.in << 'END'
-AM_C_PROTOTYPES
+AM_ONE_MACRO
 END
 
-# Set up a strange environment, where AM_C_PROTOTYPES exists but its
+# Set up a strange environment, where AM_ONE_MACRO exists but its
 # dependency does not.
-cat > AM_C_PROTOTYPES.m4 << 'END'
-AC_DEFUN(AM_C_PROTOTYPES,
-AC_REQUIRE([AM_PROG_CC_STDC]))
+cat > AM_ONE_MACRO.m4 << 'END'
+AC_DEFUN([AM_ONE_MACRO],
+[AC_REQUIRE([AM_UNEXISING_MACRO])])
 END
 
-# Our --acdir overrides the one in $ACLOCAL.
-$ACLOCAL --acdir=. && exit 1
+$ACLOCAL && exit 1
 exit 0
