@@ -1,5 +1,11 @@
 2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/dup3.test: Remove all -I from $ACLOCAL before using it.
+	* tests/error.test: Use some macro names which are not defined by
+	Automake itself.
+
+2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* automake.texi (Complete, Macros, Options): Document the new style
 	AM_INIT_AUTOMAKE.  Remove AM_AUTOMAKE_OPTIONS documentaion.
 	* m4/init.m4 (AM_INIT_AUTOMAKE): Get PACKAGE and VERSION from
